dnl ===========================================================================
dnl    "configure.in"
dnl
dnl author: Duong-Khang NGUYEN
dnl         neoneurone@users.sf.net
dnl ===========================================================================

dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/supertux.c)

AM_INIT_AUTOMAKE(SuperTux, "0.0.6 cvs")

CC=gcc
AC_SUBST(CC)

LDFLAGS=-L/usr/X11R6/lib

dnl Checks for programs.


dnl Checks for libraries.
AC_CHECK_LIB(SDL, SDL_Init, ,AC_MSG_ERROR(SDL library required))
AC_CHECK_LIB(SDL_mixer, SDL_OpenAudio, ,AC_MSG_ERROR(SDL_mixer library required))
AC_CHECK_LIB(SDL_image, IMG_Load, ,AC_MSG_ERROR(SDL_image library required))
AC_CHECK_LIB(GL, glBegin, ,AC_MSG_ERROR(GL library required))

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir strdup strstr)

AC_OUTPUT(src/Makefile Makefile)
