iconsdir=$(datadir)/pixmaps
icons_DATA = images/supertux.png

desktopdir = $(datadir)/applications
desktop_DATA = supertux.desktop

EXTRA_DIST = \
  intro.txt \
  extro.txt \
  extro-bonus.txt \
  CREDITS \
  badguys.strf \
  images/supertux.strf \
  $(wildcard sounds/*.wav) \
  $(wildcard images/*.png) \
  $(wildcard images/*.xpm) \
  $(wildcard images/background/*.png) \
  $(wildcard images/background/*.jpg) \
  $(wildcard images/fonts/*.png) \
  $(wildcard images/highscore/*.png) \
  $(wildcard images/icons/*.png) \
  $(wildcard images/icons/*.xpm) \
  $(wildcard images/intro/*.png) \
  $(wildcard images/leveleditor/*.png) \
  $(wildcard images/map/*.png) \
  $(wildcard images/shared/*.png) \
  $(wildcard images/shared/smalltux/*.png) \
  $(wildcard images/shared/bigtux/*.png) \
  $(wildcard images/status/*.png) \
  $(wildcard images/themes/*/*.png) \
  $(wildcard images/worldmap/*.png) \
  $(wildcard images/worldmap/*.stwt) \
  $(wildcard images/title/*.png) \
  $(wildcard images/title/*.jpg) \
  $(wildcard images/tilesets/*.png) \
  $(wildcard images/tilesets/*.stgt) \
  $(wildcard levels/*/*.stl) \
  $(wildcard levels/*/*.stwm) \
  $(wildcard levels/*/info) \
  $(wildcard music/*.mod) \
  $(wildcard music/*.MOD) \
  $(wildcard sounds/*.wav)

nobase_dist_pkgdata_DATA = $(EXTRA_DIST)

# EOF #
