EXTRA_DIST = \
  supertux.strf \
  $(wildcard *.txt) \
  CREDITS \
  $(wildcard sounds/*.wav) \
  images/icon.xpm \
  $(wildcard images/*.png) \
  $(wildcard images/*.xpm) \
  $(wildcard images/background/*.png) \
  $(wildcard images/background/*.jpg) \
  $(wildcard images/icons/*.png) \
  $(wildcard images/icons/*.xpm) \
  $(wildcard images/shared/*.png) \
  $(wildcard images/status/*.png) \
  $(wildcard images/worldmap/*.png) \
  $(wildcard images/worldmap/*.stwt) \
  $(wildcard images/title/*.png) \
  $(wildcard images/title/*.jpg) \
  $(wildcard images/tilesets/*.png) \
  $(wildcard images/tilesets/*.stgt) \
  $(wildcard levels/bonus1/*.stl) \
  $(wildcard levels/bonus2/*.stl) \
  $(wildcard levels/worldmaps/*.stwm) \
  $(wildcard levels/misc/*.stl) \
  $(wildcard levels/world1/*.stl) \
  $(wildcard music/*.ogg) \
  $(wildcard music/*.mod) \
  $(wildcard music/*.MOD) \
  $(wildcard sounds/*.wav)

nobase_dist_pkgdata_DATA = $(EXTRA_DIST)

# EOF #
