INCLUDES = 
METASOURCES = AUTO
lib_LTLIBRARIES = libsupertux.la
libsupertux_la_SOURCES =app/defines.h \
			app/gettext.h \
			app/globals.h app/globals.cpp \
			app/setup.h app/setup.cpp \
			audio/musicref.h audio/musicref.cpp \
			audio/sound.h audio/sound.cpp \
			audio/sound_manager.h audio/sound_manager.cpp \
			gui/button.h gui/button.cpp \
			gui/menu.h gui/menu.cpp \
			gui/mousecursor.cpp gui/mousecursor.h \
			math/physic.h math/physic.cpp \
			math/vector.h math/vector.cpp \
			special/base.h \
			special/game_object.h special/game_object.cpp \
			special/moving_object.h special/moving_object.cpp \
			special/sprite.h special/sprite.cpp \
			special/sprite_manager.h special/sprite_manager.cpp \
			special/stringlist.h special/stringlist.cpp \
			special/timer.h special/timer.cpp \
			utils/configfile.h utils/configfile.cpp \
			utils/exceptions.h \
			utils/lispreader.h utils/lispreader.cpp \
			utils/lispwriter.h utils/lispwriter.cpp \
			video/drawing_context.h video/drawing_context.cpp \
			video/font.h video/font.cpp \
			video/screen.h video/screen.cpp \
			video/surface.h video/surface.cpp
libsupertux_la_LDFLAGS = -module

