INCLUDES = 
METASOURCES = AUTO
lib_LTLIBRARIES = libsupertux.la
libsupertux_la_SOURCES =app/globals.cpp \
			app/setup.cpp \
			audio/musicref.cpp \
			audio/sound.cpp \
			audio/sound_manager.cpp \
			gui/button.cpp \
			gui/menu.cpp \
			gui/mousecursor.cpp \
			math/physic.cpp \
			math/vector.cpp \
			special/game_object.cpp \
			special/moving_object.cpp \
			special/sprite.cpp \
			special/sprite_manager.cpp \
			special/stringlist.cpp \
			special/timer.cpp \
			utils/configfile.cpp \
			utils/lispreader.cpp \
			utils/lispwriter.cpp \
			video/drawing_context.cpp \
			video/font.cpp \
			video/screen.cpp \
			video/surface.cpp
libsupertuxdir = $(includedir)/supertux
libsupertuxappdir = $(libsupertuxdir)/app
libsupertuxaudiodir = $(libsupertuxdir)/audio
libsupertuxguidir = $(libsupertuxdir)/gui
libsupertuxmathdir = $(libsupertuxdir)/math
libsupertuxspecialdir = $(libsupertuxdir)/special
libsupertuxutilsdir = $(libsupertuxdir)/utils
libsupertuxvideodir = $(libsupertuxdir)/video
libsupertuxapp_HEADERS =app/defines.h \
			app/setup.h \
			app/gettext.h \
			app/globals.h
libsupertuxaudio_HEADERS =audio/musicref.h \
			audio/sound.h \
			audio/sound_manager.h
libsupertuxgui_HEADERS =gui/button.h \
			gui/menu.h \
			gui/mousecursor.h
libsupertuxmath_HEADERS =math/physic.h \
			math/vector.h
libsupertuxspecial_HEADERS =special/base.h \
			special/game_object.h \
			special/moving_object.h \
			special/sprite.h \
			special/sprite_manager.h \
			special/stringlist.h \
			special/timer.h
libsupertuxutils_HEADERS =utils/configfile.h \
			utils/exceptions.h \
			utils/lispreader.h \
			utils/lispwriter.h
libsupertuxvideo_HEADERS =video/drawing_context.h \
			video/font.h \
			video/screen.h \
			video/surface.h 
libsupertux_la_LDFLAGS = -module

