#          Copyright Timothy Goya 2007.
# Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_1_0.txt or copy at
#          http://www.boost.org/LICENSE_1_0.txt)

PROJECT(UNISON)

INCLUDE_DIRECTORIES(${UNISON_SOURCE_DIR}/include/)

FIND_PACKAGE(SDL REQUIRED)
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
LINK_LIBRARIES(${SDL_LIBRARY})

FIND_PACKAGE(SDL_image REQUIRED)
INCLUDE_DIRECTORIES(${SDLIMAGE_INCLUDE_DIR})
LINK_LIBRARIES(${SDLIMAGE_LIBRARY})

FIND_PACKAGE(PhysFS REQUIRED)
INCLUDE_DIRECTORIES(${PHYSFS_INCLUDE_DIR})
LINK_LIBRARIES(${PHYSFS_LIBRARY})

#FIND_PACKAGE(PhysFS)
#IF(${PHYSFS_FOUND} STREQUAL "NO")
#  SET(PHYSFS_BUILD_SHARED FALSE)
#  ADD_SUBDIRECTORY(physfs-1.1.1)
#  SET(PHYSFS_INCLUDE_DIR physfs-1.1.1)
#  SET(PHYSFS_LIBRARY ${UNISON_BINARY_DIR}/physfs-1.1.1/libphysfs.a)
#ENDIF(${PHYSFS_FOUND} STREQUAL "NO")
#INCLUDE_DIRECTORIES(${PHYSFS_INCLUDE_DIR})
#LINK_LIBRARIES(${PHYSFS_LIBRARY})

IF(CMAKE_COMPILER_IS_GNUCC)
  ADD_DEFINITIONS(-g -O2 -Wall -Wextra)
ENDIF(CMAKE_COMPILER_IS_GNUCC)

IF(MSVC)
  ADD_DEFINITIONS(-D_CRG_SECURE_NO_WARNINGS=1)
ENDIF(MSVC)

CHECK_INCLUDE_FILE(assert.h HAVE_ASSERT_H)
IF(HAVE_ASSERT_H)
    ADD_DEFINITIONS(-DHAVE_ASSERT_H=1)
ENDIF(HAVE_ASSERT_H)

FILE(GLOB_RECURSE UNISON_SOURCES RELATIVE ${UNISON_SOURCE_DIR} src/*.cpp src/*.c)

ADD_LIBRARY(unison ${UNISON_SOURCES})

#IF(${PHYSFS_FOUND} STREQUAL "NO")
#  ADD_DEPENDENCIES(unison physfs-static)
#  SET(PHYSFS_FOUND "YES")
#ENDIF(${PHYSFS_FOUND} STREQUAL "NO")

FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
    ADD_CUSTOM_TARGET(docs ${DOXYGEN_EXECUTABLE} COMMENT "Building documentation")
ELSE(DOXYGEN_FOUND)
    MESSAGE(STATUS "Doxygen not found. You won't be able to build documentation.")
ENDIF(DOXYGEN_FOUND)
